# my_project

./: BFS.cpp  BFS.h  Board.cpp  Board.h  CMakeLists.txt  Card.cpp  Card.h  Cell.h  CellItem.cpp  CellItem.h  CombatSystem.cpp  CombatSystem.h  DiceSystem.cpp  DiceSystem.h  Game.cpp  Game.h  GameBoardWindow.cpp  GameBoardWindow.h  GameBoardWindow.ui  LoginPage.cpp  LoginPage.h  LoginPage.ui  MapLoader.cpp  MapLoader.h  MapSelectionWindow.cpp  MapSelectionWindow.cpp.autosave  MapSelectionWindow.h  MapSelectionWindow.ui  Player.cpp  Player.h  SplashScreen.cpp  SplashScreen.h  SplashScreen.ui  Unit.cpp  Unit.h  main.cpp  resources.qrc
maps/: 1.txt  3.txt  4.txt  map_state.txt
states/: 2.txt  3.txt  4.txt  5.txt
